fixed overflowing for long PO name

--- a/src/features/filter/filter.less
+++ b/src/features/filter/filter.less
@@ -33,5 +33,6 @@
 
   &_filter-button {
     width: fit-content;
+    padding-left: 10px;
   }
 }
